--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@inertiajs/inertia-react": "^0.8.1",
         "moment": "^2.30.1",
+        "react-input-mask": "^2.0.4",
         "react-router-dom": "^6.23.1"
     }
 }
